--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+.flex {
+    display: flex;
+}
+
+.align-start {
+    align-items: start;
+}
+
+.pt-20 {
+    padding-top: 20px;
+}
+
+.pb-20 {
+    padding-bottom: 20px;
+}
